--- a/Assets/package.json
+++ b/Assets/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.oojjrs.oaddr",
   "displayName": "OOJJRS' Unity Addressables Helper",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "unity": "6000.0",
   "description": "",
   "repository": {
@@ -11,5 +11,8 @@
   "author": {
     "name": "oojjrs",
     "email": "oojjrs@gmail.com"
+  },
+  "dependencies": {
+    "com.unity.addressables": "2.7.2"
   }
 }
